- Visit children properties to determine if changed - Use standard IChangeTracking to identify dirty - Automatically resolve TypeConverter
git-svn-id: http://svn.castleproject.org:8080/svn/castle/Components/DictionaryAdapter/trunk@6309 73e77b4c-caa6-f847-a29a-24ab75ae54b6

--- a/src/Changes.txt
+++ b/src/Changes.txt
@@ -1,6 +1,10 @@
 RC 4
 ====
 
+- Visit children properties to determine if changed
+
+- Use standard IChangeTracking to identify dirty
+
 - Added Validation group support
 
 - Added more fine-grained fetching strategy
