- Group meta and instance properties together to avoid conflict with user defined properties - Standardize edit and non-edit mode so that notifications occur consistently
git-svn-id: http://svn.castleproject.org:8080/svn/castle/Components/DictionaryAdapter/trunk@6336 73e77b4c-caa6-f847-a29a-24ab75ae54b6

--- a/src/Changes.txt
+++ b/src/Changes.txt
@@ -1,6 +1,10 @@
 RC 4
 ====
 
+- Group meta and instance properties together
+
+- Standardize edit and non-edit mode with notifications
+
 - Visit children properties to determine if changed
 
 - Use standard IChangeTracking to identify dirty
